test: create-element

--- a/examples/create-element.html
+++ b/examples/create-element.html
@@ -23,6 +23,7 @@
     const { h } = VirtualDOM
 
     const node = h('div', {
+      id: 'root',
       className: 'greetings'
     }, [
       h('h1', {}, 'Hi, Virutal DOM')
